# moduforge-rs

./: .cursorrules  .cursorrules-external-simple  .cursorrules-for-external-projects  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRONTEND.md  NEW_PROJECT_CLAUDE.md  QUICK_START.md  README.en.md  README.md  agent.md  arc_analysis.md  bug_analysis_report.md  business_dependency_design.md  check.sh  collaborative_undo_manager.rs  conflict_resolution_example.rs  conflict_resolution_strategy.md  conflict_resolver_impl.rs  executive_summary.md  history_with_arc_analysis.md  immutable_alternatives.rs  immutable_without_imhashmap_solution.md  node-budget-mapping.md  package.json  performance_comparison.rs  project_analysis_report.md  publish.bat  relative_position_system.rs  release.toml  rustfmt.toml  setup-external-project.md  simple_enhanced_history.md  yrs_integration_gaps.md  yrs_integration_summary.md
core/: Cargo.toml  README.md
core/model/: Cargo.toml
core/model/src/: content.rs
core/src/: async_processor.rs  async_runtime.rs  error.rs  event.rs  extension.rs  extension_manager.rs  flow.rs  lib.rs  logging.rs  main.rs  mark.rs  metrics.rs  middleware.rs  node.rs  runtime.rs  sync_processor.rs  traits.rs  types.rs
core/src/helpers/: create_doc.rs  get_schema_by_resolved_extensions.rs
core/src/model/: attrs.rs  content.rs  error.rs  id_generator.rs  main.rs  mark.rs  mark_type.rs  mod.rs  node.rs  node_pool.rs  node_type.rs  patch.rs  schema.rs  types.rs
core/src/state/: error.rs  main.rs  mod.rs  plugin.rs  state.rs  transaction.rs
core/src/transform/: add_node_step.rs  attr_step.rs  mark_step.rs  mod.rs  node_step.rs  step.rs  transform.rs
core/state/: Cargo.toml
core/state/src/: error.rs  lib.rs  state.rs  transaction.rs
core/transform/: Cargo.toml
core/transform/src/: lib.rs  step.rs  transform.rs
crates/collaboration/: Cargo.toml  README.md
crates/collaboration/benches/: collaboration.rs
crates/collaboration/src/: error.rs  lib.rs  main.rs  mapping.rs  middleware.rs  sync_service.rs  types.rs  ws_server.rs  yrs_manager.rs
crates/collaboration/tests/: collaboration.rs
crates/collaboration_client/: Cargo.toml
crates/collaboration_client/examples/: client.rs
crates/collaboration_client/src/: client.rs  conn.rs  handler.rs  lib.rs  mapping.rs  provider.rs  types.rs  utils.rs
crates/contex/: Cargo.toml  README.md
crates/contex/examples/: aop_macro_demo.rs  auto_aop_demo.rs  basic_usage.rs  comprehensive_demo.rs  macro_usage.rs
crates/contex/src/: aop.rs  component.rs  error.rs  lib.rs  lifecycle.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: core.rs  core_perf.rs
crates/core/examples/: adaptive_runtime.rs  base.rs  chrome_tracing_demo.rs  config_usage.rs  improved_api_usage.rs  improved_event_system.rs  tokio_console_demo.rs  tracing_demo.rs  tracing_filtering_demo.rs  unified_config.rs  xml_schema_integration.rs  xml_schema_integration_complete.rs  xml_schema_parsing.rs
crates/core/src/: async_flow.rs  async_processor.rs  async_runtime.rs  async_utils.rs  config.rs  debug.rs  error.rs  error_helpers.rs  event.rs  extension.rs  extension_manager.rs  flow.rs  history_manager.rs  lib.rs  mark.rs  metrics.rs  middleware.rs  node.rs  runtime.rs  (+7 more)
crates/deno/: Cargo.toml  README.md  code_cache.rs  fmt_errors.rs  inspector_server.rs  js.rs  lib.rs  permissions.rs  shared.rs  snapshot.rs  snapshot_info.rs  tokio_util.rs  transpile.rs  web_worker.rs  worker.rs  worker_bootstrap.rs
crates/derive/: COMPILE_ERRORS.md  Cargo.toml  EXAMPLES.md  MACRO_USAGE.md  README.md
crates/engine/: Cargo.toml  README.md
crates/expression/: Cargo.toml
crates/file/: Cargo.toml  README.md  README_ASYNC.md  SYNC_ASYNC_PARITY.md
crates/macro/: COMPLETE_EXTENSION_EXAMPLE.md  Cargo.toml  EXTENSION_MACRO_USAGE.md  MACRO_USAGE.md  PLUGIN_MACRO_USAGE.md  WORKING_EXAMPLE_AND_EXPANSION.md
crates/model/: Cargo.toml  GRAPH_MODEL_DESIGN.md  README.md  VERSIONED_GRAPH_DESIGN.md
crates/persistence/: Cargo.toml
crates/search/: Cargo.toml  README.md
crates/state/: Cargo.toml  README.md
crates/template/: Cargo.toml
crates/transform/: Cargo.toml  README.md
crates/transmission/: Cargo.toml
delta/: Cargo.toml
delta/src/: delta.rs  diff.rs  lib.rs  main.rs  snapshot.rs
demo/: .env  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  Cargo.toml  FIXES_SUMMARY.md  HOT_RELOAD_GUIDE.md  PACKAGING_GUIDE.md  README.md  WINDOW_AND_DATA_GUIDE.md  WINDOW_CONTROLS_FIXES.md  WINDOW_CONTROL_TEST.md  WINDOW_CREATION_DEBUG.md  components.d.ts  dev-setup.js  index.html  package.json  test-child-window.html  test-simple-header.html  vite.config.js  vite.config.ts
demo/src/: App.vue  content_plugins.rs  document_nodes.rs  edit_commands.rs  event_handler.rs  lib.rs  main.js  main.rs  main.ts  middleware.rs  plugins.rs  resources.rs  simple_demo.rs  workflow_middleware.rs
demo/src-tauri/: Cargo.toml  tauri.conf.json
devtool-rules/: Cargo.toml
devtool-rules/src/: lib.rs  main.rs
engine/: Cargo.toml
engine-dev-tools/: Cargo.toml
engine-dev-tools/src/: main.rs
engine/src/: engine.rs  lib.rs
macros/: Cargo.toml
macros/derive/: Cargo.toml
macros/macro/: Cargo.toml
macros/src/: command.rs  extension.rs  lib.rs  mark.rs  node.rs  plugin.rs
model/: Cargo.toml
model/src/: attrs.rs  content.rs  error.rs  id_generator.rs  lib.rs  mark_type.rs  node_pool.rs  node_type.rs  schema.rs  tree.rs
runtime/: Cargo.toml
runtime/src/: async_processor.rs  async_runtime.rs  engine_manager.rs  error.rs  event.rs  event_handler.rs  extension.rs  extension_manager.rs  flow.rs  history_manager.rs  lib.rs  macros.rs  main.rs  mark.rs  node.rs  runtime.rs  snapshot_manager.rs  storage_manager.rs  traits.rs  types.rs
storage/: Cargo.toml
tests/: Cargo.toml
tests/src/: base.rs  commands.rs  content_test.rs  ext.rs  lib.rs  main.rs  middleware.rs  plugins.rs  search_test.rs  snapshot_test.rs  zip_test.rs
transform/: Cargo.toml
transform/src/: attr_step.rs  draft.rs  lib.rs  mark_step.rs  node_step.rs  patch.rs  step.rs  transform.rs
(+2962 files in other folders)
