[workspace]
resolver = "2"
members = [
    "crates/*",
    "tools/*"
]
exclude = [
    "examples/*"
]

[workspace.package]
version = "0.6.5"
edition = "2024"
authors = ["String <348040933@qq.com>"]
license = "MIT"

documentation = "https://github.com/Cassielxd/moduforge-rs"
homepage = "https://github.com/Cassielxd/moduforge-rs"
repository = "https://github.com/Cassielxd/moduforge-rs"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
reqwest = "0.12.11"
tracing = "0.1"
futures-util = "0.3"
yrs-warp = "0.8.0"
yrs = "0.18.2"
sysinfo = "0.37.2"
tokio-tungstenite = "0.21.0"

ctor = "0.4.2"


serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tempfile = "3"
anyhow = "1"
# imbl 不可变数据实现
imbl = { version = "6.0.0", features = ["serde", "rayon"] }
thiserror = "2.0.12"
dashmap = "6.1.0"
# 异步 trait
async-trait = "0.1"
chrono = "0.4"
async-channel = "2.3.1"
# 日志系统
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "chrono"] }
tracing-appender = "0.2"
# 追踪可视化（可选）
tracing-chrome = { version = "0.7" }
tracing-perfetto = { version = "0.1" }
backtrace = { version = "0.3" }
# tokio-console 支持（实时异步任务监控）
console-subscriber = { version = "0.4" }

uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
# 并行
rayon = "1.8"
# 缓存
lru = "0.14.0"
# 锁
parking_lot = "0.12"
url = { version = "2.5", features = ["serde", "expose_internals"] }
# 哈希
ahash = "0.8"
# 单次初始化
once_cell = "1"
# 图
petgraph = "0.8"
# 性能测试
criterion = "0.5"

# XML 解析依赖
quick-xml = { version = "0.36", features = ["serialize"] }

rbs = "4.6.2"
rbatis = "4.6.12"
rbdc-sqlite = "4.6.2"


#crates 下所有的库
moduforge-core = { version = "0.6.5", path = "crates/core" }
moduforge-state = { version = "0.6.5", path = "crates/state" }
moduforge-model = { version = "0.6.5", path = "crates/model" }
moduforge-transform = { version = "0.6.5", path = "crates/transform" }
moduforge-file = { version = "0.6.5", path = "crates/file" }
moduforge-persistence = { version = "0.6.5", path = "crates/persistence" }
moduforge-search = { version = "0.6.5", path = "crates/search" }
moduforge-macros = { version = "0.6.5", path = "crates/macro" }
moduforge-macros-derive = { version = "0.6.5", path = "crates/derive" }
moduforge-collaboration = { version = "0.6.5", path = "crates/collaboration" }
moduforge-collaboration-client = { version = "0.6.5", path = "crates/collaboration_client" }


[workspace.features]
# 开发环境追踪 feature（仅开发时启用，生产环境零开销）
dev-tracing = [
    "moduforge-core/dev-tracing",
    "moduforge-state/dev-tracing",
    "moduforge-model/dev-tracing",
    "moduforge-transform/dev-tracing",
    "moduforge-file/dev-tracing",
    "moduforge-persistence/dev-tracing",
    "moduforge-search/dev-tracing",
    "moduforge-collaboration/dev-tracing",
]

# 性能分析 feature（包含 Perfetto 导出）
dev-tracing-perfetto = ["dev-tracing", "tracing-perfetto"]

# 错误栈追踪 feature
dev-tracing-backtrace = ["dev-tracing", "backtrace"]

# tokio-console 实时监控 feature（用于异步任务调试）
dev-console = [
    "moduforge-core/dev-console",
    "console-subscriber",
]


[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
 