[package]
name = "moduforge-delta"
version = "0.1.0"
edition = "2024"
description = "增量和全量快照"

[lib]
lib="./src/lib.rs"

[dependencies]
im= {workspace=true}
log = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
tokio= {workspace=true}
bincode= {workspace=true}
moduforge-core= {workspace=true}
zstd= {workspace=true}