[package]
name = "moduforge-demo"
version = {workspace=true}
edition = {workspace=true}
description = "用于演示"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[dependencies]

serde_json = {workspace=true}

async-trait= {workspace=true}
tokio= {workspace=true}
im = {workspace=true}
anyhow = "1.0"

tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.8"
moduforge-model = {version = "0.4.11", path = "../crates/model"}
moduforge-state = {version = "0.4.11", path = "../crates/state"}
moduforge-transform = {version = "0.4.11", path = "../crates/transform"}
moduforge-core = {version = "0.4.11", path = "../crates/core"}
metrics-exporter-prometheus = "0.13.1"
