[package]
name = "devtool-rules-backend"
version = "0.1.0"
edition = "2021"
publish = false



[lib]
path="src/lib.rs"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
anyhow = "1"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
moduforge-rules-engine = { path = "../crates/engine", version = "0.4.5" }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "4.0.0"