[package]
name = "engine-dev-tools"
version = "0.1.0"
edition = "2021"
publish = false
description = "规则流程配置编辑器"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
anyhow =  {workspace=true}
tokio = {workspace=true}
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde =  {workspace=true}
serde_json =  {workspace=true}
moduforge-engine =  {workspace=true}