[package]
name = "moduforge-engine"
version = "0.1.0"
edition = "2021"
description = "规则引擎实现"
[lib]
lib="./src/lib.rs"

[dependencies]
tokio= {workspace=true}
log = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
zen-engine= {workspace=true}
moduforge-core= {workspace=true}