[package]
name = "moduforge-macros"
version = {workspace=true}
edition = {workspace=true}
description = "moduforge 宏定义"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}
[lib]
lib="./src/lib.rs"


[dependencies]
moduforge-model = {version = "0.3.6", path = "../model"}
moduforge-state = {version = "0.3.6", path = "../state"}
moduforge-transform = {version = "0.3.6", path = "../transform"}
moduforge-core = {version = "0.3.6", path = "../core"}

