[package]
name = "moduforge-model"
version = {workspace=true}
edition = {workspace=true}
description = "不可变数据结构与事务系统基础"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[lib]
lib="src/lib.rs"

[dependencies]
im= {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
tokio= {workspace=true}

# 日志系统
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }

rayon = { workspace = true }
lru = { workspace = true }

crossbeam = { workspace = true }
parking_lot ={ workspace = true }

dashmap = { workspace = true }
once_cell = "1.19"

