[package]
name = "moduforge-runtime"
version = "0.1.0"
edition = "2024"
description = "插件加载、热更新、依赖管理"
[lib]
lib="./src/lib.rs"

[dependencies]
tokio = {workspace=true}
metrics= {workspace=true}
lazy_static= {workspace=true}
metrics-exporter-prometheus= {workspace=true}
async-channel= {workspace=true}
im= {workspace=true}
rocksdb = {workspace=true}
tempfile={workspace=true}
zip={workspace=true}
zstd= {workspace=true}
chrono= {workspace=true}
zen-expression= {workspace=true}
log = {workspace=true}
lru = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
bincode= {workspace=true}
moduforge-delta = {workspace=true}
moduforge-core= {workspace=true}
zen-engine= {workspace=true}