[package]
name = "moduforge-runtime"
version = {workspace=true}
edition = {workspace=true}
description = "插件加载、热更新、依赖管理"
authors = {workspace=true}
license = {workspace=true}
[lib]
lib="./src/lib.rs"


[dependencies]
tokio = {workspace=true}
tokio-util = {workspace=true}
metrics= {workspace=true}
lazy_static= {workspace=true}
metrics-exporter-prometheus= {workspace=true}
async-channel= {workspace=true}
im= {workspace=true}
chrono= {workspace=true}
log = {workspace=true}
lru = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
moduforge-core = {version = "0.1.3", path = "../core"}

