[package]
name = "moduforge-test"
version = {workspace=true}
edition = {workspace=true}
description = "用于测试"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[dependencies]
log = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
thiserror= {workspace=true}
async-trait= {workspace=true}
tokio= {workspace=true}
moduforge-model = {version = "0.3.6", path = "../model"}
moduforge-state = {version = "0.3.6", path = "../state"}
moduforge-transform = {version = "0.3.6", path = "../transform"}
moduforge-core = {version = "0.3.6", path = "../core"}
moduforge-macros = {version = "0.3.6", path = "../macros"}