[package]
name = "moduforge-collaboration"
version = {workspace=true}
edition = {workspace=true}
description = "moduforge 协作系统"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[lib]
name = "mf_collab"
path = "src/lib.rs"

[dependencies]
tokio =  { workspace=true }
tracing-subscriber = { workspace=true }
futures-util = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
uuid = { workspace=true }
anyhow = { workspace=true }
thiserror = { workspace=true }
tracing = "0.1"
dashmap = { workspace=true }

warp = "0.3.7"
yrs-warp = { workspace=true }
yrs = { workspace=true }
moduforge-model = {version = "0.4.6", path = "../model"}
moduforge-state = {version = "0.4.6", path = "../state"}
moduforge-transform = {version = "0.4.6", path = "../transform"}
moduforge-core = {version = "0.4.6", path = "../core"}
moduforge-macros = {version = "0.4.6", path = "../macro"}
async-trait =  { workspace=true }
fastrand = "2.0"
