[package]
name = "moduforge-collaboration-client"
version = {workspace=true}
edition = {workspace=true}
description = "moduforge 协作系统"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[lib]
name = "mf_collab_client"
path = "src/lib.rs"

[dependencies]
tokio =  { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
tracing =  { workspace=true }
tracing-subscriber = { workspace=true }
futures-util = { workspace=true }
yrs =  { workspace=true }
tokio-tungstenite = { workspace=true }
url =  { workspace=true }
uuid = { workspace=true }
anyhow = { workspace=true }
chrono = "0.4"
moduforge-model = {version = "0.4.7", path = "../model"}
moduforge-state = {version = "0.4.7", path = "../state"}
moduforge-transform = {version = "0.4.7", path = "../transform"}
moduforge-core = {version = "0.4.7", path = "../core"}
moduforge-macros = {version = "0.4.7", path = "../macro"}
