[package]
name = "moduforge-core"
version = { workspace = true }
edition = { workspace = true }
description = "moduforge 核心模块"
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
[lib]
name = "mf_core"
path = "src/lib.rs"



[dependencies]
tokio = { workspace = true }
async-channel = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
moduforge-model = { workspace = true }
moduforge-state = { workspace = true }
moduforge-transform = { workspace = true }
metrics = "0.22.0"
arc-swap = "1.6"
dashmap = { workspace = true }
quick-xml = { workspace = true }

ractor = { version = "0.15.8", features = ["async-trait"] }
sysinfo = { workspace = true }
num_cpus = "1.16"

# 追踪相关依赖
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
tracing-perfetto = { workspace = true, optional = true }
backtrace = { workspace = true, optional = true }

[features]
build-tools = []
debug-logs = []
# 开发环境追踪 feature
dev-tracing = [
    "tracing/max_level_trace",
    "tracing-subscriber",
    "tracing-appender",
]
dev-tracing-chrome = ["dev-tracing", "tracing-chrome"]
dev-tracing-perfetto = ["dev-tracing", "tracing-perfetto"]
dev-tracing-backtrace = ["dev-tracing", "backtrace"]
default = ["debug-logs"]

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"




